Add more global vars to FVCBUFS

--- a/dos33.html
+++ b/dos33.html
@@ -4481,20 +4481,20 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     163 
                     164 
                     165 
-                    166 
-                    167 
-                    168 
-                    169 
-                    170 
-                    171 
-                    172 
-                    173 
-                    174 
-                    175 
-                    176 
-                    177 
-                    178 
-                    179 
+35E2:00 00          166 <a class="d" name="DCBCDL"     >DCBCDL      </a> DS 2           ; SECTOR DATA LENGTH
+35E4:00 00          167 <a class="d" name="DCBCRS"     >DCBCRS      </a> DS 2           ; CURRENT RELATIVE SECTOR           ; See <a class="x" href="#FVAR">FVAR</a>
+35E6:00 00          168 <a class="d" name="DCBCSB"     >DCBCSB      </a> DS 2           ; CURRENT SECTOR BYTE
+35E8:00 00          169 <a class="d" name="DCBCRL"     >DCBCRL      </a> DS 2           ; RECORD LENGTH
+35EA:00 00          170 <a class="d" name="DCBCRR"     >DCBCRR      </a> DS 2           ; CURRENT RELATIVE REC
+35EC:00 00          171 <a class="d" name="DCBCRB"     >DCBCRB      </a> DS 2           ; CURRENT RELATIVE BYTE
+35EE:00 00          172 <a class="d" name="DCBNSA"     >DCBNSA      </a> DS 2           ; NO SECTORS ALLOCATED
+                    173 ;
+35F0:00             174 <a class="d" name="DCBALS"     >DCBALS      </a> DS 1           ; ALLOCATION SECTOR BYTE
+35F1:00             175 <a class="d" name="DCBATK"     >DCBFUC      </a> DS 1           ; ALLOCATION TRACK
+35F2:00 00 00 00    176 <a class="d" name="DCBABM"     >DCBABM      </a> DS 4           ; ALLOCATION TRACK SECTOR BIT MAP   ; *<a class="mem" href="_35F2">wastes</a> 2 bytes
+                    177 ;
+35F6:00             178 <a class="d" name="DCBFUC"     >DCBFUC      </a> DS 1           ; FILE USE CODE
+35F7:00             179 <a class="d" name="DCBSLT"     >DCBSLT      </a> DS 1           ; SLOT NUMBER
 <hr>35F8:00             180 <a class="d" name="DCBDRV"     >DCBDRV      </a>DS 1            ; DRIVE NUMBER                  ; === Page <a class="page" name="page89">89</a> ===
 35F9:00             181 <a class="d" name="DCBVOL"     >DCBVOL      </a>DS 1            ; VOLUME DRIVER
 35FA:00             182 <a class="d" name="DCBVTN"     >DCBVTN      </a>DS 1            ; VTOC TRACK NUMBER
