--- a/dos33.html
+++ b/dos33.html
@@ -4085,27 +4085,27 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     181 
                     182 
                     183 
-                    184 
-                    185 
-                    186 
-                    187 
-                    188 
-                    189 
-                    190 
-                    191 
-                    192 
-                    193 
-                    194 
-                    195 
-                    196 
-                    197 
-                    198 
-                    199 
-                    200 
-                    201 
-                    202 
-                    203 
-                    204 
+32F0:A2 04          <a class="line" name="FLOCSEC_184">184</a>             LDX #4                                          ; Wastes 4 bytes/track for free sector bitmap
+32F2:BD F1 35       185 <a class="f" name="FS3"    >FS3         </a>LDA <a class="v" href="#DCBABM">DCBABM</a>-1,X  ; GET BIT MAP BYTE
+32F5:19 F6 33       186             ORA <a class="v" href="#VSECAL">VSECAL</a>+3,Y  ; OR WITH VTOC BM
+32F8:99 F6 33       187             STA <a class="v" href="#VSECAL">VSECAL</a>+3,Y
+32FB:88             188             DEY
+32FC:CA             189             DEX
+32FD:D0 F3          190             BNE <a class="x" href="#FS3">FS3</a>
+32FF:60             191 <a class="f" name="FS4"    >FS4         </a>RTS
+                    192             PAGE
+                    193 ;
+                    194 ;LOCSEC - LOCATE SECTOR FOR RECORD I/O
+                    195 ;
+                    196 ;RELSEC = (REL REC * RECLEN + RELBYTE)/256
+                    197 ;SECBYT = REMAINDER
+                    198 ;
+                    199 LOCSEC      EQU *                                           ;               <b>Proper</b> variable names such as
+3300:AD BD 35       200             LDA <a class="v" href="#CCBRRN">CCBRRN</a>      ; RELATIVE RECORD NUMBER        ; === <b class="ts">T2S2</b> ===  CCB_REL_REC_NUM
+3303:8D E6 35       201             STA <a class="v" href="#DCBCSB">DCBCSB</a>      ; TO CSB FOR MULT               ;               Would negate the need for
+3306:8D EA 35       202             STA <a class="v" href="#DCBCRR">DCBCRR</a>      ; AND CRR FOR SAVE              ;               50% of comments
+3309:AD BE 35       203             LDA <a class="v" href="#CCBRRN">CCBRRN</a>+1                                    ; But's let abbrev. the frak out of everything
+                    204             
                     205 
                     206 
                     207 
@@ -4491,7 +4491,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     173 ;
 35F0:00             174 <a class="d" name="DCBALS"     >DCBALS      </a> DS 1           ; ALLOCATION SECTOR BYTE
 35F1:00             175 <a class="d" name="DCBATK"     >DCBFUC      </a> DS 1           ; ALLOCATION TRACK
-35F2:00 00 00 00    176 <a class="d" name="DCBABM"     >DCBABM      </a> DS 4           ; ALLOCATION TRACK SECTOR BIT MAP   ; *<a class="mem" href="_35F2">wastes</a> 2 bytes
+35F2:00 00 00 00    176 <a class="d" name="DCBABM"     >DCBABM      </a> DS 4           ; ALLOCATION TRACK SECTOR BIT MAP   ; *<a class="mem" href="_35F2">wastes</a> 2 bytes, See <a class="x" href="#FS3">FS3</a> and Line #<a class="line" href="#FLOCSEC_184">184</a>
                     177 ;
 35F6:00             178 <a class="d" name="DCBFUC"     >DCBFUC      </a> DS 1           ; FILE USE CODE
 35F7:00             179 <a class="d" name="DCBSLT"     >DCBSLT      </a> DS 1           ; SLOT NUMBER
