Fixup line format color style references to not use bold and italic

--- a/dos33.html
+++ b/dos33.html
@@ -264,16 +264,21 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
         <td>Opcode(s)</td>
     </tr>
     <tr>
-        <td>L##</td>
+        <td><a class="line">L##</a></td>
         <td>Line number of source file</td>
     </tr>
     <tr>
         <td>LABEL</td>
-        <td>Function name, or branch target name<br><b>Function</b><br><i>Data</i></td>
+        <td>Function name, or branch target name
+<br><a class="f">Function Definition</a>, or 
+<br><a class="d">Data Definition</a></td>
     </tr>
     <tr>
         <td>MNEMONIC</td>
-        <td>Assembly language instruction</td>
+        <td>Assembly language instruction
+<br><a class="x">Function Reference</a>
+<br><a class="v">Variable Reference</a>
+</td>
     </tr>
     <tr>
         <td>COMMENT</td>
