Cleaned up improvements

--- a/dos33.html
+++ b/dos33.html
@@ -230,7 +230,7 @@ Numerous improvements have been made over the original source code listings:
 <ul>
   <li>Hyperlinks to all function labels (blue),                       </li>
   <li>Hyperlinks to all variable labels (green),                      </li>
-  <li>Load address and opcodes,                                       </li>
+  <li>Address and opcodes,                                       </li>
   <li>Added line numbers,                                             </li>
   <li>Cleaned up sloppy vertical alignment (such as (#) clock cycles),</li>
   <li>Added annotation commentary column,                             </li>
