Markup ORIGIN link

--- a/dos33.html
+++ b/dos33.html
@@ -429,7 +429,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     093                 REP 40
                     094 *
                     095 *
-                    096             ORG ORIGIN
+                    096             ORG <a class="x" href="#ORIGIN">ORIGIN</a>
                     097 *
                     098 *
                     099             REP 40
