--- a/dos33.html
+++ b/dos33.html
@@ -650,13 +650,44 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 <hr>; === <a class="file" name="DOSINIT">DOSINIT</a> - Command Tables and Interpreter, Page <a class="page" name="page48">48</a>, <b class="ts">T0SC</b>, $<span class="adr">9D00</span> .. $<span class="adr">9E80</span> ===<hr>
                     001 <a class="d" name="HEREL"    >HEREL       </a>HEREL       EQU &gt;*
                     002 <a class="d" name="REMDR"    >REMDR       </a>REMDR       EQU 256-<a class="v" href="#HEREL">HEREL</a>
-                    003             ORG *+<a class="v" href="#REMDR">REMDR</a>
+1C81:00 00 00       003             ORG *+<a class="v" href="#REMDR">REMDR</a>              ; <a class="mem" name="_1C81">wastes</a> 82 bytes ($1CD3-$1C81 = $52)
+1C84:00 00 00 00
+1C88:00 00 00 00
+1C8C:00 00 00 00
+1C90:00 00 00 00
+1C94:00 00 00 00
+1C98:00 00 00 00
+1C9C:00 00 00 00
+1CA0:00 00 00 00
+1CA4:00 00 00 00
+1CA8:00 00 00 00
+1CAC:00 00 00 00
+1CB0:00 00 00 00
+1CB4:00 00 00 00
+1CB8:00 00 00 00
+1CBC:00 00 00 00
+1CC0:00 00 00 00
+1CC4:00 00 00 00
+1CC8:00 00 00 00                                                                    ; ECLOSE, EDEL, EPOS, RWPOSN, CLOSFILE call 
+1CCC:00 00 00 00                                                                    ;   <a class="x" href="#FILSRC">FILSRC</a> (File Search)
+1CD0:00 00 00 00                                                                    ; [00] $1CD3 ($9CD3) Used by <a class="x" href="#TSINIT">TSINIT</a>, init @ Line #<a class="line" href="#BLDFTAB_036">036</a>
+1CD4:00 00 00 00
+1CD8:00 00 00 00
+1CDC:00 00 00 00
+1CE0:00 00 00 00
+1CE4:00 00 00 00
+1CE8:00 00 00 00                                                                    ; See init @ <a class="x" href="#BFT1">BFT1</a>, Line #<a class="line" href="#BLDFTAB_041">041</a>
+1CEC:00 00 00 00                                                                    ; [1E] $1CF1 ($9CF1): $9CA6 (buf1 ptr)
+1CF0:00 00 00 00                                                                    ; [20] $1CF3 ($9CF3): $9BA6 (buf2 ptr)
+1CF4:00 00 00 00                                                                    : [22] $1CF5 ($9CF5): $9AA6 (buf3 ptr)
+1CF8:00 00 00 00                                                                    ; $1CF8 Use by <a class="x" href="#TSNXT">TSNXT</a>
+1CFC:00 00 00 00
                     004 ;
                     005 ;RELOCATION TABLES
                     006 ;
                     007 <a class="d" name="START"      >START       </a>EQU *
                     008 <a class="d" name="SAT1"       >SAT1        </a>EQU *
-1D00:D3 1C          009 <a class="d" name="FTAB"       >FTAB        </a>DW *-45
+1D00:D3 1C          009 <a class="d" name="FTAB"       >FTAB        </a>DW *-45                                         ; = $1CD3; Really? Couldn't do <span class="macro">FTAB DS 45, 0</span>
 1D02:81 1E          010 <a class="d" name="CINA"       >CINA        </a>DW CHRIN
 1D04:BD 1E          011 <a class="d" name="COUTA"      >COUTA       </a>DW CHROUT
 1D06:75 2A          012 <a class="d" name="FN1ADR"     >FN1ADR      </a>DW FNAME1
@@ -2436,52 +2467,52 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 27D4:               025 <a class="f" name="BLDFTB"     >BLDFTB      </a>EQU *
 27D4:38             026             SEC
 27D5:AD 00 1D       027             LDA <a class="v" href="#FTAB"  >FTAB</a>        ; START OF FTAB AREA            ;
-27D8:85 40          028             STA <a class="v" href="#ZPGWRK">ZPGWRK</a>      ; IS 1ST FTB PTR                ;
+27D8:85 40          028             STA <a class="v" href="#ZPGWRK">ZPGWRK</a>      ; IS 1ST FTB PTR                ; $1D00: ptr $1CD3
 27DA:AD 01 1D       029             LDA <a class="v" href="#FTAB"  >FTAB</a>+1      ; HEADER
 27DD:85 41          030             STA <a class="v" href="#ZPGWRK">ZPGWRK</a>+1
-27DF:AD 57 2A       031             LDA <a class="v" href="#CNFTBS">CNFTBS</a>      ; MOVE NO FTABS                 ; fdosent, 60
+27DF:AD 57 2A       031             LDA <a class="v" href="#CNFTBS">CNFTBS</a>      ; MOVE NO FTABS                 ; default 3 buffers
 27E2:8D 63 2A       032             STA <a class="v" href="#TEMP1A">TEMP1A</a>      ; TO TEMP                       ; fdosent, 60
                     033 ;
 27E5:A0 00          034 <a class="f" name="BFT1"       >BFT1        </a>LDY #<span class="adr">0</span>
 27E7:98             035             TYA
-27E8:91 40          036             STA (ZPGWRK),Y  ; 1ST CHAR FN=0
-27EA:A0 1E          037             LDY #<span class="adr">30</span>         ; INC Y TO FCB PTR
+27E8:91 40          <a class="line" name="BLDFTAB_036">036</a>             STA (ZPGWRK),Y  ; 1ST CHAR FN=0                 ; Init [00] $9CD3: 00
+27EA:A0 1E          037             LDY #<span class="adr">30</span>         ; INC Y TO FCB PTR              ; [[FTAB] + offset $1E] = $1CF1
 27EC:38             038             SEC
 27ED:A5 40          039             LDA ZPGWRK      ; END OF PTR HEADER
 27EF:E9 2D          040             SBC #FCBLEN     ; MINUS FTAB LENGTH
-27F1:91 40          041             STA (ZPGWRK),Y  ; IS START OF FTB
+27F1:91 40          <a class="line" name="BLDFTAB_041">041</a>             STA (ZPGWRK),Y  ; IS START OF FTB               ; Init [1E] $9CD3 = $9CF1: $9CA6 buf #1 ptr
 27F3:48             042             PHA             ; SAVE LOW ADR BYTE
 27F4:A5 41          043             LDA ZPGWKR+1
 27F6:48             044             SBC #<span class="adr">0</span>
 27F8:C8             045             INY
-27F9:91 40          046             STA (ZPGWKR),Y
+27F9:91 40          046             STA (ZPGWKR),Y                                  ; [1F] = page
 27FB:AA             047             TAX
 27FC:CA             048             DEX             ; FTB ADR - 256
 27FD:68             049             PLA             ; IS ADR DIR BUFF
 27FE:48             050             PHA
 27FF:C8             051             INY
-2800:91 40          052             STA (ZPGWRK),Y  ; SET DIR BUF PTR               ; === <b class="ts">T1$7</b> ===
+2800:91 40          052             STA (ZPGWRK),Y  ; SET DIR BUF PTR               ; === <b class="ts">T1$7</b> === [20] $9CD3 = $9BF3: $9BA6 buf #2 ptr
 2802:8A             053             TXA
 <hr>2803:C8             054             INY                                             ; === Page <a class="page" name="page5">5</a> ===
-2804:91 40          055             STA (ZPGWRK),Y
+2804:91 40          055             STA (ZPGWRK),Y                                  ; [21] = page
 2806:AA             056             TAX
 2807:CA             057             DEX             ; DIR BUFF - 256
 2808:68             058             PLA             ; IS SBUFF ADR
 2809:48             059             PHA
 280A:C8             060             INY
-280B:91 40          061             STA (ZPGWRK),Y
+280B:91 40          061             STA (ZPGWRK),Y                                  ; [22] $9CD3 = $9CF5: $9AA6
 280D:C8             062             INY
 280E:8A             063             TXA
 280F:91 40          064             STA (ZPGWRK),Y
                     065 ;
-2811:CE 63 2A       066             DEC TEMP1A      ; DECREMENT TABLE INDEX         ; TEMP1A @ $<b class="adr">AA63</b>
+2811:CE 63 2A       066             DEC <a class="v" href="#TEMP1A">TEMP1A</a>      ; DECREMENT TABLE INDEX         ; Init all buffers?
 2814:F0 17          067             BEQ <a class="x" href="#BFT2">BFT2</a>        ; COUNT AND BR IF DONE          ; v
 2816:AA             068             TAX
 2817:68             069             PLA
 2818:38             070             SEC
 2819:E9 26          071             SBC #<span class="adr">38</span>         ; SBUFF ADR - 38
 281B:C8             072             INY
-281C:91 40          073             STA (ZPGWRK),Y  ; IF ADR OF NEXT TAB
+281C:91 40          073             STA (ZPGWRK),Y  ; IF ADR OF NEXT TAB            ; [24] $9CD3 = $9CF7: $9A80
 281E:48             074             PHA             ; WHICH GOES INTO
 281F:8A             075             TXA             ; LINK
 2820:E9 00          076             SBC #<span class="adr">0</span>
@@ -2490,7 +2521,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2825:85 41          079             STA ZPGWRK+1    ; AND INTO ZPGWRK
 2827:68             080             PLA             ; FOR NEXT ENTRY
 2828:85 40          081             STA ZPGWRK      ; BUILD
-282A:4C E5 27       082             JMP <a class="x" href="#BFT1">BFT1</a>                                        ; ^ BFT1 @ $<b class="adr">A7E4</b>
+282A:4C E5 27       082             JMP <a class="x" href="#BFT1">BFT1</a>                                        ; ^ BFT1 @ $<b class="adr">A7E4</b> <a class="mem" name="_282A">wastes</a> 1 byte, A = addr lo: $80
                     083 ;
                     084 <a class="f" name="BFT2"      id="BFT2"       >BFT2        </a>EQU *
 282D:48             085             PHA
