--- a/dos33.html
+++ b/dos33.html
@@ -2763,7 +2763,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2A53:00 00          008 SVOUTS      DDB 0
 2A55:00 00          009 SVINS       DDB 0
 2A57:00             010 CNFTBS      DFB 0           ; CURRENT NO FILE TABLES        ; "NO" == Number
-2A58:03             011 DFNFB       DFB 3           ; DEFAULT NO FILE TABLES        ; Does anyone actually use > 2 ?
+2A58:03             011 DFNFB       DFB 3           ; DEFAULT NO FILE TABLES        ; Does anyone actually use &gt; 2 ?
                     012 
                     013 
                     014 
